tests/positive/AliasRecordConstructor.juvix
module AliasRecordConstructor;

type A := a;

type T := mkT {field : A};

syntax alias mkT' := mkT;

t : T :=
  mkT'@{
    field := a
  };
