tests/negative/MicroJuvix/Positivity/E10.juvix
module E10;

inductive T0 (A : Type) {
t : (A -> T0 A) -> T0 A;
};

alias : Type -> Type;
alias := T0;

inductive T1 {
  c : (alias T1 -> T1;
};

end;